@@ -2,8 +2,8 @@
   <div
     fxLayout="column"
     fxLayoutGap="1rem"
-    fxFlex.sm="100%"
-    fxFlex.md="75%"
+    fxFlex.sm="65%"
+    fxFlex.md="60%"
     fxFlex.lg="55%"
     fxFlex.xl="45%"
   >
@@ -27,16 +27,11 @@
         </span>
       </span>
       <form nz-form [nzLayout]="isLarge ? 'horizontal' : 'vertical'">
-        <!-- nzLayout="inline" -->
         <app-mod-line
           *ngFor="let mod of unit.modStack.mods; trackBy: getModId"
           [mod]="mod"
           [uiQuantityString]="mod.uiQuantityString"
-          [uiPreset0]="mod.uiPresetString[0]"
-          [uiPreset1]="mod.uiPresetString[1]"
-          [uiPreset2]="mod.uiPresetString[2]"
-          [uiPreset3]="mod.uiPresetString[3]"
-          [uiPreset4]="mod.uiPresetString[4]"
+          [priorityUi]="mod.priorityUi"
           [unit]="unit"
           (modChange)="onModChange($event)"
         ></app-mod-line>
@@ -58,12 +53,12 @@
           nz-button
           nzType="primary"
           [disabled]="disabled"
-          (click)="confirmPresets()"
+          (click)="savePriorities()"
         >
-          <span>Save Presets</span>
+          <span>Save Priorities</span>
         </button>
-        <button nz-button nzType="default" (click)="cancelPresets()">
-          <span>Reset presets</span>
+        <button nz-button nzType="default" (click)="resetPriorities()">
+          <span>Reset Priorities</span>
         </button>
       </nz-input-group>
 
@@ -82,7 +77,7 @@
           <td colspan="3" class="center"><strong>Production</strong></td>
         </tr>
         <tr *ngFor="let prod of unit.production">
-          <td [ngClass]="prod.product.colorClass">
+          <td [ngClass]="prod.product.colorClass" class="no-wrap">
             <i nz-icon [nzType]="prod.product.icon"></i>
             {{ prod.product.name }}
           </td>
@@ -143,33 +138,6 @@
             <span class="monospace">{{ ms.game.baseRecycling | format }}</span>
           </td>
           <td></td>
-        </tr>
-      </tbody>
-    </nz-table>
-  </div>
-  <div>
-    <nz-table nzTemplateMode>
-      <thead>
-        <tr>
-          <th>Preset</th>
-          <th colspan="2" class="req-head">Mod Required</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let req of [0, 1, 2, 3, 4]">
-          <td>
-            {{ req + 1 }}
-          </td>
-          <td class="monospace min-w">
-            {{ modRequired[req] | format: true }}
-          </td>
-          <td
-            class="monospace min-w"
-            [class.text-success]="modRequired[req].gt(modRequiredTemp[req])"
-            [class.text-danger]="modRequired[req].lt(modRequiredTemp[req])"
-          >
-            {{ modRequiredTemp[req] | format: true }}
-          </td>
         </tr>
       </tbody>
     </nz-table>
