@@ -257,3 +257,6 @@ nz-alert {
 .ant-alert-with-description {
   padding: 8px 15px 8px 64px;
 }
+.no-wrap {
+  white-space: nowrap;
+}
